--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -1,107 +1,107 @@
 {
     "TranslationsData": {
-        " (elite max)": " (elite max)",
-        " (unrestored)": " (unrestored)",
-        " records": " records",
-        " sec": " sec",
+        " (elite max)": " (精英滿級)",
+        " (unrestored)": " (未修複)",
+        " records": " 紀錄",
+        " sec": " 秒",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
-        "ABOUT": "ABOUT",
-        "AUDIO": "AUDIO",
-        "AUTOSHOW": "AUTOSHOW",
-        "All the best races of the racers go here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
-        "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
-        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "Autoshow <color=#FFD540>PRO</color> mode  (technical info)",
-        "Avatar": "Avatar",
-        "BACK": "BACK",
-        "BEST DRIVER!": "BEST DRIVER!",
-        "BEST:": "BEST:",
-        "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating at the tier": "Basic specs and the car rating at the tier",
-        "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
-        "Boss time: ": "Boss time: ",
-        "CAR INFO (vision)": "CAR INFO (vision)",
-        "CONFIRM CHANGES": "CONFIRM CHANGES",
-        "CONNECTION FAILED": "CONNECTION FAILED",
-        "CREATORS": "CREATORS",
-        "CREDITS": "CREDITS",
-        "Car name": "Car name",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "Check out the cost of each part, as well as the effects of the sixth parts!",
-        "City camera speed": "City camera speed",
-        "Click here to change the leaderboard!": "Click here to change the leaderboard!",
-        "Click to change car type!": "Click to change car type!",
-        "DYNO:": "DYNO:",
-        "Driver": "Driver",
-        "ELITE MAX": "ELITE MAX",
-        "ELITE STOCK": "ELITE STOCK",
-        "EXIT": "EXIT",
-        "Effects volume": "Effects volume",
-        "FAVORITEs": "FAVORITEs",
-        "FINAL DRIVE": "FINAL DRIVE",
-        "Failed download, check internet connection and restart app": "Failed download, check internet connection and restart app",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
-        "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
-        "Gacha imports": "Gacha imports",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
-        "Get update!": "Get update!",
-        "Here you can see the best tuning settings": "Here you can see the best tuning settings",
-        "I already know": "I already know",
-        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "Initializing the database...",
-        "LOADING SCREEN": "LOADING SCREEN",
-        "Let's choose the unrestored version": "Let's choose the unrestored version",
-        "Let's go!": "Let's go!",
-        "Let's look at LEGENDS": "Let's look at LEGENDS",
-        "Let's look at this car": "Let's look at this car",
-        "MILESTONE SEASON CAR": "MILESTONE SEASON CAR",
-        "Music clip": "Music clip",
-        "Music volume": "Music volume",
-        "NEW": "NEW",
-        "NITROUS OXIDE": "NITROUS OXIDE",
-        "Number of upgrades and fusion parts": "Number of upgrades and fusion parts",
-        "OFF": "OFF",
-        "ON": "ON",
-        "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHER": "OTHER",
-        "Petrol or electric car": "Petrol or electric car",
-        "Preparing the city...": "Preparing the city...",
-        "Price of full car upgrades": "Price of full car upgrades",
-        "Price of the car:": "Price of the car:",
-        "Quit": "Quit",
-        "RARE IMPORTS": "RARE IMPORTS",
-        "RELEASE iNFO": "RELEASE iNFO",
-        "Rarity": "Rarity",
-        "Records": "Records",
-        "Reset": "Reset",
-        "Restart": "Restart",
-        "SEASON CARS": "SEASON CARS",
-        "SETTINGS": "SETTINGS",
-        "Save": "Save",
-        "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
-        "Start": "Start",
-        "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally a AUTOSHOW in city, let me show you around?": "There's finally a AUTOSHOW in city, let me show you around?",
-        "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
-        "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car could have won the teams championship. In the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "This car is part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is a autoshow - here is collected information about all cars! Let's see": "This is a autoshow - here is collected information about all cars! Let's see",
-        "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.",
-        "Time": "Time",
-        "Total needed:": "Total needed:",
-        "UNRESTORED": "UNRESTORED",
-        "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
-        "Updating the database...": "Updating the database...",
-        "WORLD RECORDS": "WORLD RECORDS",
-        "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to your favorites": "You can add important cars to your favorites",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "You can find the car you need by manufacturer or car groups. There is even a favorites section!",
-        "You can go straight to the autoshow, just click on the car!": "You can go straight to the autoshow, just click on the car!",
-        "You can mark the cars you have": "You can mark the cars you have",
-        "You can see the visual specs here": "You can see the visual specs here",
-        "text coming soon...": "text coming soon..."
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下載量大",
+        "ABOUT": "關于",
+        "AUDIO": "音響",
+        "AUTOSHOW": "車展",
+        "All the best races of the racers go here! Let's see this hall of fame": "車手們的最佳賽事都在這裏! 讓我們看看這個名人堂",
+        "And finally, click to see additional information about the car": "最後，點擊查看車輛的額外資訊",
+        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
+        "Avatar": "頭像",
+        "BACK": "返回",
+        "BEST DRIVER!": "最佳車手!",
+        "BEST:": "最佳:",
+        "BOSS CAR": "領袖車輛",
+        "Basic specs and the car rating at the tier": "等級内的車輛基本規格和積分",
+        "Best result and racer. Click to watch the best shift video!": "最佳成績與車手。點擊觀看最佳換擋的視頻!",
+        "Boss time: ": "領袖時間: ",
+        "CAR INFO (vision)": "車輛資訊 (自  Vision 資料庫)",
+        "CONFIRM CHANGES": "確認更改",
+        "CONNECTION FAILED": "連綫失敗",
+        "CREATORS": "創建者",
+        "CREDITS": "特別鳴謝",
+        "Car name": "車名",
+        "Check out the cost of each part, as well as the effects of the sixth parts!": "檢查各個零件的價格，以及第六級升級的作用!",
+        "City camera speed": "城市攝像機的速度",
+        "Click here to change the leaderboard!": "點擊這裏更換排行榜!",
+        "Click to change car type!": "點擊更換車種!",
+        "DYNO:": "測功機:",
+        "Driver": "車手",
+        "ELITE MAX": "精英滿級",
+        "ELITE STOCK": "精英原廠",
+        "EXIT": "離開",
+        "Effects volume": "音效聲量",
+        "FAVORITEs": "最愛",
+        "FINAL DRIVE": "最終傳動",
+        "Failed download, check internet connection and restart app": "下載失敗，檢查網絡連接后重啓應用",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我們終於可以查看最快玩家和他們的車輛。跟我來，我給你看看!",
+        "Find out how many elite components you need to fully upgrade your car!": "查看升滿車輛需要多少精英元件!",
+        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "CSR<color=yellow>2</color>-HUB 需要下載數據: <color= #FFAA0D>{0}</color>，請確認不是使用受限網絡后確認下載程序",
+        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "爲了確保正確運行需下載額外數據，請檢查網絡連接后重試",
+        "Gacha imports": "抽獎進口",
+        "Get up-to-date information on how many Legends components you need to restore your car!": "獲取和修復傳奇車輛所需的元件數量有關的最新消息!",
+        "Get update!": "獲取更新!",
+        "Here you can see the best tuning settings": "你可以在這裏查看最佳調節",
+        "I already know": "我已知曉",
+        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "基礎結構源自 ABS (@stasss125)\n資源源自 Nitro4CSR (@nitr04)\n\n也參與其中:\n- MAINTANERS\n- FREYCKSSON\n",
+        "Initializing the database...": "正在初始化數據庫...",
+        "LOADING SCREEN": "加載屏幕",
+        "Let's choose the unrestored version": "我們來選擇未修復的版本",
+        "Let's go!": "我們出發!",
+        "Let's look at LEGENDS": "我們來看看傳奇",
+        "Let's look at this car": "我們來看看這輛車",
+        "MILESTONE SEASON CAR": "賽季里程碑車輛",
+        "Music clip": "音樂曲子",
+        "Music volume": "音樂聲量",
+        "NEW": "新",
+        "NITROUS OXIDE": "氮氣加速",
+        "Number of upgrades and fusion parts": "升級及合成零件的數量",
+        "OFF": "關閉",
+        "ON": "開啓",
+        "OPEN CONFIGURATOR": "開啓配置器",
+        "OTHER": "其他",
+        "Petrol or electric car": "汽油或電動車",
+        "Preparing the city...": "正在准備城市中...",
+        "Price of full car upgrades": "滿級的價格",
+        "Price of the car:": "車輛的價格:",
+        "Quit": "退出",
+        "RARE IMPORTS": "稀有進口",
+        "RELEASE iNFO": "推出資訊",
+        "Rarity": "稀有度",
+        "Records": "紀錄",
+        "Reset": "重置",
+        "Restart": "重啓",
+        "SEASON CARS": "賽季車輛",
+        "SETTINGS": "設置",
+        "Save": "保存",
+        "Some settings have been changed, save changes?": "一些設置已被更改，是否保存更改？",
+        "Start": "開始",
+        "TIRE PRESSURE": "輪胎氣壓",
+        "There's finally a AUTOSHOW in city, let me show you around?": "城市裏終於有個車展了，要不要我帶你看看？",
+        "This car can be obtained by defeating the boss": "這輛車可通過擊敗領袖獲取",
+        "This car cannot be obtained anywhere": "這輛車無法獲取",
+        "This car could have won the teams championship. In the following seasons:": "這輛車可以在以下賽季裏贏取:",
+        "This car is part of a collection and can be purchased with collection credits.": "這輛車屬於某個收藏的一部分，且可透過收藏積分購買",
+        "This is a autoshow - here is collected information about all cars! Let's see": "這是個車展 - 這裏收著所有車輛的資訊！ 我們來看看",
+        "This is the podium, the best cars and drivers show off here": "這裏是頒獎臺，最佳的車輛和車手都展示在這裏",
+        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "這個計劃是爲了自動化和整頓整個游戲的必要資訊到一個集中點開發的!\n\n幾乎所有應用的資源皆爲 CSR2 所屬，且是 NaturalMotion => Zynga => Take-Two Interactive 的財產。 所使用的資源只用於給社群提供參考資訊，無其他用途",
+        "Time": "時間",
+        "Total needed:": "總需:",
+        "UNRESTORED": "未修復",
+        "UPGRADE DETAILED INFO": "升級詳細資訊",
+        "Updating the database...": "正在更新數據庫...",
+        "WORLD RECORDS": "世界紀錄",
+        "WR CAR RATING": "世界紀錄的車輛積分",
+        "You can add important cars to your favorites": "你可以把重要的車輛加入最愛裏",
+        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "你可以區分廠家或車種查尋車輛。甚至還有最愛的選項！",
+        "You can go straight to the autoshow, just click on the car!": "你可以直接前往車展，只需點擊車輛！",
+        "You can mark the cars you have": "你可以標記已擁有的車輛",
+        "You can see the visual specs here": "你可以在這裏查看外觀規格",
+        "text coming soon...": "即將來臨..."
     }
 }
